# datapulse

./: .gitignore  IMPLEMENTATION.md  STATE.md  implementation.md
backend/: Cargo.toml
backend/src/: config.rs  main.rs  rate_limiter.rs  state.rs
backend/src/mock_data/: crypto.rs  ecommerce.rs  mod.rs  news.rs  social.rs  weather.rs
backend/src/routes/: crypto.rs  dashboard.rs  ecommerce.rs  mod.rs  news.rs  scrapers.rs  social.rs  weather.rs
frontend/: package.json  postcss.config.js
frontend/src/: app.css  app.html
frontend/src/lib/components/charts/: SparklineChart.svelte
frontend/src/lib/components/dashboard/: ScraperStatusCard.svelte  StatsCard.svelte
frontend/src/lib/components/layout/: Header.svelte  Sidebar.svelte
frontend/src/lib/components/shared/: Badge.svelte  DataTable.svelte  LoadingSpinner.svelte
frontend/src/lib/types/: index.ts
frontend/src/lib/utils/: api.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/crypto/: +page.svelte
frontend/src/routes/ecommerce/: +page.svelte
frontend/src/routes/news/: +page.svelte
frontend/src/routes/scrapers/: +page.svelte
frontend/src/routes/social/: +page.svelte
frontend/src/routes/weather/: +page.svelte
