[package]
name = "datapulse_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
tokio-stream = "0.1"
axum-extra = { version = "0.10", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
